--- a/kudu/KuduStaticFiles/_Layout.cshtml
+++ b/kudu/KuduStaticFiles/_Layout.cshtml
@@ -63,7 +63,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a class="navbar-brand" href="~/" style="padding-top: 17px" href="~/Env.cshtml">Environment</a></li>
+                    <li><a class="navbar-brand" style="padding-top: 17px" href="~/Env.cshtml">Environment</a></li>
                     @if (Kudu.Core.Helpers.OSDetector.IsOnWindows())
                     {
                         <li class="dropdown">
